--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,8 @@
+MESSAGE(STATUS "")
+MESSAGE(STATUS "### wELCOME TO THE SERVER-CLIENT AUTH LIBRARY ###")
+MESSAGE(STATUS "************************************************")
+MESSAGE(STATUS "")
+
 #-------------------------------------------------------------------
 # This file is part of the CMake build system for the server-client-auth library
 #-------------------------------------------------------------------
@@ -9,8 +14,11 @@ cmake_minimum_required(VERSION 2.6)
 # Specify some user configurable options
 # 
 
-OPTION(BUILD_SERVER, ON)
-OPTION(BUILD_CLIENT, ON)
+OPTION(BUILD_SERVER "Build server lib" ON)
+OPTION(BUILD_CLIENT "Build Client lib" ON)
+OPTION(BUILD_UTIL "Build util lib" ON)
+
+OPTION(BUILD_UNIT_TESTS "Build unit tests" ON)
 
 #
 # Also load the CMakeLists file in sub-folders.
@@ -20,6 +28,49 @@ if (BUILD_SERVER)
   add_subdirectory(server)
 endif ()
 
-if(BUILD_CLIENT)
+if (BUILD_CLIENT)
   add_subdirectory(client)
 endif ()
+
+if (BUILD_UTIL)
+  add_subdirectory(util)
+endif ()
+
+if(BUILD_UNIT_TESTS)
+  add_subdirectory(tests)
+endif()
+
+#doxygen configuration based on the method found  @ https://mementocodex.wordpress.com/2013/01/19/how-to-generate-code-documentation-with-doxygen-and-cmake-a-slightly-improved-approach/
+option(BUILD_DOCUMENTATION "Create and install the HTML based API documentation (requires Doxygen)" ON)
+IF(BUILD_DOCUMENTATION)
+ 
+  FIND_PACKAGE(Doxygen)
+  IF(NOT DOXYGEN_FOUND)
+    MESSAGE(FATAL_ERROR
+      "Doxygen is needed to build the documentation.")
+  ENDIF()
+ 
+  SET( doxyfile_in          ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in     )
+  SET( doxyfile             ${PROJECT_BINARY_DIR}/Doxyfile              )
+  SET( doxy_html_index_file ${CMAKE_CURRENT_BINARY_DIR}/html/index.html )
+  SET( doxy_output_root     ${CMAKE_CURRENT_BINARY_DIR}/documentation   ) # Pasted into Doxyfile.in
+  SET( doxy_input           ${PROJECT_SOURCE_DIR}/                      ) # Pasted into Doxyfile.in
+  SET( doxy_extra_files     ${CMAKE_CURRENT_SOURCE_DIR}/mainpage.dox    ) # Pasted into Doxyfile.in
+ 
+  CONFIGURE_FILE( ${doxyfile_in} ${doxyfile} @ONLY )
+
+  ADD_CUSTOM_COMMAND( OUTPUT ${doxy_html_index_file}
+                      COMMAND ${DOXYGEN_EXECUTABLE} ${doxyfile} ALL
+                      # The following should be ${doxyfile} only but it
+                      # will break the dependency.
+                      # The optimal solution would be creating a 
+                      # custom_command for ${doxyfile} generation
+                      # but I still have to figure out how...
+                      MAIN_DEPENDENCY ${doxyfile} ${doxyfile_in}
+                      DEPENDS project_targets ${doxy_extra_files}
+                      COMMENT "Generating HTML documentation")
+ 
+  ADD_CUSTOM_TARGET( doc ALL DEPENDS ${doxy_html_index_file} )
+ 
+  INSTALL( DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION share/doc )
+ENDIF()
