--- a/util/config/CMakeLists.txt
+++ b/util/config/CMakeLists.txt
@@ -8,7 +8,7 @@ SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build)
 
 SET (SOURCE_FILES_CONFIG
- "${CMAKE_CURRENT_SOURCE_DIR}/config_reader_build_opts.h"
+ "${CMAKE_CURRENT_SOURCE_DIR}/util_build_opts.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/IConfigClass.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/ConfigClass.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/ConfigClass.cpp"
@@ -17,11 +17,23 @@ SET (SOURCE_FILES_CONFIG
  "${CMAKE_CURRENT_SOURCE_DIR}/ConfigReader.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/ConfigReader.cpp")
  
+SET (SOURCE_FILES_HASH
+ "${PROJECT_SOURCE_DIR}/util/hash/Hash.h"
+ "${PROJECT_SOURCE_DIR}/util/hash/Hash.cpp")
+ 
+ 
 SOURCE_GROUP("config" FILES
   ${SOURCE_FILES_CONFIG}
 )
- 
-add_library(config SHARED ${SOURCE_FILES_CONFIG})
+ SOURCE_GROUP("hash" FILES
+  ${SOURCE_FILES_HASH}
+)
+
+SET (SOURCE_FILES 
+  ${SOURCE_FILES_CONFIG}
+  ${SOURCE_FILES_HASH})
+
+add_library(util SHARED ${SOURCE_FILES})
 
 # ---------------- Link Libraries section --------------------
 # Set the link options: the libraries to link against. Store them in a temporary variable
@@ -41,9 +53,9 @@ ELSEIF(UNIX AND NOT APPLE)
     ${LINK_LIBS_CONFIG}
     )
 ENDIF()
-ADD_DEFINITIONS(-DCONFIG_READER_EXP)
+ADD_DEFINITIONS(-DUTIL_EXP)
 ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
 
 
 
-target_link_libraries(config ${LINK_LIBS_CONFIG})
+target_link_libraries(util ${LINK_LIBS_CONFIG})
