--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ compiler:
   - gcc
   - clang
 # Change this to your needs
-script:  mkdir build && cd build && cmake ../ && make
+script:  mkdir build && cd build && cmake 
