fixed memory leak problem, added http post support

--- a/sqliteInterface/CMakeLists.txt
+++ b/sqliteInterface/CMakeLists.txt
@@ -46,8 +46,8 @@ ELSEIF(UNIX AND NOT APPLE)
     )
 ENDIF()
 #-D ca sa ia ca si definitie
-ADD_DEFINITIONS(-DSSLCIENTDLL_EXPORTS)
+ADD_DEFINITIONS(-DSQLDLL_EXPORTS)
 ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
-ADD_DEFINITIONS(-DASIO_STANDALONE)
+
 
 target_link_libraries(sqliteInterface ${LINK_LIBS_CONFIG})
