modyfied project to be able to be built on linux

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -19,13 +19,11 @@ SOURCE_GROUP("client" FILES
 ${SOURCE_FILE_CLIENT}
 )
 
-set(OPENSSL_INCLUDE_DIR CACHE FILEPATH "OpensSsl include directorie")
-set(OPENSSL_LIBRARIES CACHE FILEPATH "OpensSsl lib directorie")
-set(ASIO_INCLUDE "default value" CACHE FILEPATH "asio include directorie")
+find_package(OpenSSL REQUIRED)
 
 INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
-INCLUDE_DIRECTORIES(${ASIO_INCLUDE})
-
+INCLUDE_DIRECTORIES(${ASIO_INCLUDE_DIR})
+INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
 # SHARED for DLL
 add_library(client SHARED ${SOURCE_FILES_CLIENT})
 
@@ -38,8 +36,7 @@ IF(WIN32)
   SET(LINK_LIBS_CONFIG
     ws2_32.lib
     winmm.lib
-	${OPENSSL_LIBRARIES}/ssleay32.lib
-	${OPENSSL_LIBRARIES}/libeay32.lib
+    ${OPENSSL_LIBRARIES}
     ${LINK_LIBS_CONFIG}
     )
 ELSEIF(UNIX AND NOT APPLE)
@@ -51,7 +48,7 @@ ELSEIF(UNIX AND NOT APPLE)
     )
 ENDIF()
 #-D ca sa ia ca si definitie
-ADD_DEFINITIONS(-DSSLCIENTDLL_EXPORTS)
+ADD_DEFINITIONS(-DSCA_EXP)
 ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
 ADD_DEFINITIONS(-DASIO_STANDALONE)
 
