--- a/util/config/CMakeLists.txt
+++ b/util/config/CMakeLists.txt
@@ -18,6 +18,7 @@ SET (SOURCE_FILES_CONFIG
  "${CMAKE_CURRENT_SOURCE_DIR}/ConfigReader.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/ConfigFactory.h")
  
+ include_directories("${PROJECT_SOURCE_DIR}/include")
  
 SOURCE_GROUP("config" FILES
   ${SOURCE_FILES_CONFIG}
@@ -43,7 +44,7 @@ ELSEIF(UNIX AND NOT APPLE)
     ${LINK_LIBS_CONFIG}
     )
 ENDIF()
-ADD_DEFINITIONS(-DCONFIG_READER_EXP)
+ADD_DEFINITIONS(-DSCA_EXP)
 ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
 
 
