forced cmake to use g++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,3 +78,7 @@ IF(BUILD_DOCUMENTATION)
  
   INSTALL( DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION share/doc )
 ENDIF()
+
+IF(UNIX AND NOT APPLE)
+add_definitions(-DCMAKE_CXX_COMPILER=g++)
+ENDIF()
