--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,6 @@ IF(BUILD_DOCUMENTATION)
 ENDIF()
 
 IF(UNIX AND NOT APPLE)
-add_definitions(-DCMAKE_CXX_COMPILER=g++ 
-                -Dstd=c++11)
+add_definitions(-DCMAKE_CXX_COMPILER=g++)
+SET(CMAKE_CXX_FLAGS "-std=c++11")
 ENDIF()
