--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -44,14 +44,15 @@ ELSEIF(UNIX AND NOT APPLE)
   CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
   CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
   if(COMPILER_SUPPORTS_CXX11)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -fpermissive  -o test_server -pthread")
 elseif(COMPILER_SUPPORTS_CXX0X)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -g -fpermissive -o test_server -pthread")
 else()
         message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 endif()
 ENDIF()
 add_definitions(-DASIO_STANDALONE -D_WIN32_WINNT=0x0501 )
 ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
-add_executable (server ${SOURCE_FILES_SERVER})
-target_link_libraries(server  ${LINK_LIBS_SERVER})
+
+add_executable (test_server ${SOURCE_FILES_SERVER})
+target_link_libraries(test_server  ${LINK_LIBS_SERVER})
