--- a/util/config/CMakeLists.txt
+++ b/util/config/CMakeLists.txt
@@ -8,15 +8,14 @@ SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build)
 
 SET (SOURCE_FILES_CONFIG
- "${CMAKE_CURRENT_SOURCE_DIR}/config_reader_build_opts.h"
- "${CMAKE_CURRENT_SOURCE_DIR}/IConfigClass.h"
- "${CMAKE_CURRENT_SOURCE_DIR}/ConfigClass.h"
+ "${PROJECT_SOURCE_DIR}/include/util/config/IConfigClass.h"
+ "${PROJECT_SOURCE_DIR}/include/util/config/ConfigClass.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/ConfigClass.cpp"
- "${CMAKE_CURRENT_SOURCE_DIR}/ConfigException.h"
+ "${PROJECT_SOURCE_DIR}/include/util/config/ConfigException.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/ConfigException.cpp"
- "${CMAKE_CURRENT_SOURCE_DIR}/ConfigReader.h"
+ "${PROJECT_SOURCE_DIR}/include/util/config/ConfigReader.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/ConfigReader.cpp"
- "${CMAKE_CURRENT_SOURCE_DIR}/ConfigFactory.h")
+ "${PROJECT_SOURCE_DIR}/include/util/config/ConfigFactory.h")
  
  include_directories("${PROJECT_SOURCE_DIR}/include")
  
@@ -43,20 +42,21 @@ ELSEIF(UNIX AND NOT APPLE)
     ${X11_Xrandr_LIB}
     ${LINK_LIBS_CONFIG}
     )
+    include(CheckCXXCompilerFlag)
+    CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
+    CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
+    if(COMPILER_SUPPORTS_CXX11)
+      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    elseif(COMPILER_SUPPORTS_CXX0X)
+      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+    else()
+      message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+endif()
 ENDIF()
 ADD_DEFINITIONS(-DSCA_EXP)
 ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
 
-include(CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-if(COMPILER_SUPPORTS_CXX11)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-elseif(COMPILER_SUPPORTS_CXX0X)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-else()
-        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
-endif()
+
 
 
 
