--- a/tests/readconfig_test/CMakeLists.txt
+++ b/tests/readconfig_test/CMakeLists.txt
@@ -10,6 +10,7 @@ FIND_PACKAGE(GTestLocal)
 
 link_directories(${PROJECT_SOURCE_DIR}/build/)
 include_directories(${PROJECT_SOURCE_DIR}/
+                    ${PROJECT_SOURCE_DIR}/include/
                     ${GTest_INCLUDE_DIR})
 
 
